<resources>
    <string name="app_name">lab2</string>
    <string name="color1">Primary color</string>
    <string name="color2">Primary color, buy darker</string>
    <string name="color3">Accent color</string>
    <string name="logo">Logo</string>
    <string name="description">Online movie database</string>
    <string name="top_week">Top This Week</string>
    <string name="all_movies">All The Movies</string>
    <string name="movies">Movies</string>
    <string name="movie_name">Movie name</string>
    <string name="movie_category">Movie Category</string>
    <string name="rating">8.6</string>
    <string name="add_a_movie">Add a Movie</string>
    <string name="movie_thumbnail">Movie Thumbnail URL</string>
    <string name="movie_year">Movie year (ex. 2005)</string>
    <string name="movie_length"><![CDATA[Movie length in minutes (ex. 134)]]></string>
    <string name="submit">Submit</string>
    <string name="clear">Clear</string>
    <string name="movie_details">Movie Details</string>
    <string name="set_a_rating">Set a rating</string>
    <string name="ok">OK</string>
</resources>
