<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_a_movie"
        android:textColor="@color/colorAccent"
        android:textSize="24sp" />

    <ScrollView
        android:id="@+id/ScrollView01"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edit_movie_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_edittext"
                android:hint="@string/movie_name"
                android:inputType="textPersonName"
                android:padding="10dp" />

            <EditText
                android:id="@+id/edit_movie_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_edittext"
                android:hint="@string/movie_category"
                android:inputType="textPersonName"
                android:padding="10dp" />

            <EditText
                android:id="@+id/edit_movie_thumbnail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_edittext"
                android:hint="@string/movie_thumbnail"
                android:inputType="text"
                android:padding="10dp" />

            <EditText
                android:id="@+id/edit_movie_year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_edittext"
                android:hint="@string/movie_year"
                android:inputType="numberDecimal"
                android:padding="10dp" />

            <EditText
                android:id="@+id/edit_movie_length"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_edittext"
                android:hint="@string/movie_length"
                android:inputType="numberDecimal"
                android:padding="10dp" />

            <Button
                android:id="@+id/submit_button"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:background="@color/colorAccent"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>